<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="pow">x^2</string>
    <string name="sqrt">sqrt</string>
    <string name="inv">1/x</string>
    <string name="factorial">x!</string>
    <string name="ac">ac</string>
    <string name="percentage">%</string>
    <string name="div">/</string>
    <string name="times">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="del">del</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_0">0</string>
    <string name="dot">.</string>
    <string name="parenthesis">( )</string>
    <string name="equals">=</string>

</resources>
